Recolors tags, changes trailer

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -25,6 +25,8 @@
     color:#666;
     text-align:center;
     margin:10px;
+    font-size:14px;
+    line-height:20px;
   }
   #list {
     margin:10px;
