--- a/css/desktop.css
+++ b/css/desktop.css
@@ -31,6 +31,8 @@
     text-align:center;
     color:#666;
     margin-top:10px;
+    font-size:14px;
+    line-height:20px;
   }
   #list {
     margin:20px 40px;
@@ -85,7 +87,8 @@
   .desktop-tags {
     
   }
-  .desktop-tags .tag {
+  .desktop-tags 
+  {
     display:inline-block;
   }
   .meta {
